--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <link rel="stylesheet" href="./css/style.css"/>
         <script defer src="./js/script.js" type="module"></script>
+        <script defer src="./js/helpers.js"></script>
 
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
