--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 
 <html>
     <head>
-        <title>RSpotify Random Song Generator</title>
+        <title>Youtube Random Video Generator</title>
 
         <link rel="stylesheet" href="./css/style.css"/>
         <script defer src="./js/script.js" type="module"></script>
-        <script defer src="./js/helpers.js" type="module"></script>
 
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
-    <boy>
+    <body>
         <section>
             <form>
                 <label>Select Genre</label>
@@ -24,5 +23,5 @@
                 
             </div>
         </section>
-    </boy>
+    </body>
 </html>
