--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <section>
+        <section class="video-generator">
             <form>
                 <label>Select Genre</label>
                 <select id="genres" name="genres"></select>
